--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Southern States -- Fiction'
+- GITenberg
 title: "The Law of the Land\r\nOf Miss Lady, Whom It Involved in Mystery, and of John\
   \ Eddring, Gentleman of the South, Who Read Its Deeper Meaning: A Novel"
 url: http://www.gutenberg.org/ebooks/6431
